fix z-index

--- a/styles/header.css
+++ b/styles/header.css
@@ -89,6 +89,7 @@
 		left: 0;
 		width: 100%;
 		height: 64px;
+		z-index: 999;
 	}
 
 	.header-menu {
